<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/start_action"
        android:onClick="onClickStart"
        android:title="@string/start_action_title"
        android:icon="@drawable/ic_media_play_dark"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/stop_action"
        android:onClick="onClickStop"
        android:title="@string/stop_action_title"
        android:icon="@drawable/ic_media_stop_dark"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/tail_action"
        android:icon="@drawable/ic_tail_action"
        android:onClick="onClickTail"
        android:title="@string/tail_action_title"
        app:showAsAction="ifRoom" />
    <item
        android:title="@string/menu_settings_label"
        android:onClick="onClickSettings" />
    <item
        android:title="@string/menu_help_label" />
    <item
        android:title="@string/menu_about_label" />
</menu>
